- Added new translations - Fixed display of some older translations (SemesterPopupView) - added test .aj files to gitignore

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/LearningObjective.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/LearningObjective.properties
@@ -1,25 +1,25 @@
-G = General Objective
-P = Problem as Starting Point for Training
-S = General Skill
-C = Discipline-Related Objectives (Clinical Picture or Further Knowledge)
-ME = Medical Expert	
-IM = Internal Medicine
-CM = Communicator	
-PT = Pharmacothera
-CL = Collaborato	
-SU = Surgery
-MA = Manager	
-PE = Pediatrics
-HA = Health Advocate	
-GO = Gynecology - Obstetrics
-SC = Scholar	
-PS = Psychiatry
-PR = Professional	
-OP = Ophthalmology
-DE = Dermatology
-OT = Otorhinolaryngology
-RN = Radiology \u2013 Nuclear Medicine
-PH = Public Health, Insurance- and Occupational Medicine
-FM = Forensic Medicine
-CLASSIFICATION_TOPIC_P = Blank
-CLASSIFICATION_TOPIC_S = Blank
+G = Allgemeines Ziel*
+P = Ausgangsproblem f\u00FCr Training*
+S = Allgemeine Fertigkeit*
+C = Disziplinbezogenes Ziel (Klinisches Bild oder weiterf\u00FChrendes Wissen)*
+ME = Medizinisches Wissen*
+IM = Innere Medizin*
+CM = Kommunikator*
+PT = Pharmakotherapie*
+CL = Zusammenarbeit*
+SU = Chirurgie*
+MA = Verwaltung*
+PE = Pediatrie*
+HA = Gesundheitsberatung*
+GO = Gyn\u00E4kologie - Obstetrik*
+SC = Lehre*
+PS = Psychiatrie*
+PR = Professionell*
+OP = Ophthalmologie*
+DE = Dermatologie*
+OT = HNO-Heilkunde*
+RN = Radiologie \u2013 Nuklearmedizin*
+PH = Gesundheitswissenschaften, Versicherungs- und Arbeitsmedizin*
+FM = Forensische Medizin*
+CLASSIFICATION_TOPIC_P = Leer*
+CLASSIFICATION_TOPIC_S = Leer*
