--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -251,8 +251,8 @@ addReviewer = Revisor hinzuf\u00FCgen*
 keyword = Schl\u00FCsselwort
 keywords=Schl\u00FCsselw\u00F6rter*
 addKeyword = Schl\u00FCsselwort hinzuf\u00FCgen*
-keywordExists=Keyword already exists !
-enterKeyword=Schl\u00FCsselwort eingeben...
+keywordExists = Schl\u00FCsselwort existiert bereits!
+enterKeyword = Schl\u00FCsselwort eingeben...
 
 #RoleDetailsView/Learning
 learning = Lernen*
@@ -677,19 +677,21 @@ nationaltiyWarning = Nationalit\u00E4t existiert bereits!
 #LearningObjectivView
 lrnObjAppliance = Hilfsmittel
 
-warningStandardizedRoleUnassigned = Please assign role to each station
-accessNotification=Access is all ready assigned
-information=Information
-roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role
-roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
+warningStandardizedRoleUnassigned = Bitte jedem Posten eine Rolle zuweisen!
+accessNotification = Zugriff wurde bereits zugewiesen!
+information = Information
+roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role***
+roleTemplateDeleteMessage=Rollenvorlage wurde erfolgreich gel\u00F6scht!
 
-csvFileError = File not proceed, it must contain student_id, name and prename field
-statisticsEvaluation=Statistics Evaluation
-statisticsEvaluationPlace=Statistics Evaluation place
-createOsce=Create Osce
-osceAssignments=Osce Assignments
-assignmentsOutput=Assignments Output
-afterTheOsce=After the OSCE
+csvFileError = Datei nicht verarbeitet. student_id, name und prename sind Pflichtfelder!
+statisticsEvaluation = Statistische Auswertung
+statisticsEvaluationPlace = Statistischer Auswertungsplatz***
+createOsce=OSCE erstellen
+osceAssignments=OSCE Zuweisungen***
+assignmentsOutput=Zuweisungsresultate***
+afterTheOsce=Nach dem OSCE***
 
-osceLunchBreakRequiredFiled=Lunch Break Required Field
-osceLongBreakRequiredFiled=Long Break Required Field
+osceLunchBreakRequiredFiled = Mittagspause ist ein Pflichtfeld!
+osceLongBreakRequiredFiled = Lange Pause ist ein Pflichtfeld!
+
+warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
