--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -251,8 +251,8 @@ addReviewer = Add reviewer
 keyword = Keyword
 keywords=Keywords*
 addKeyword = Add keyword
-keywordExists=Keyword already exists !
-enterKeyword=Enter Keyword...
+keywordExists = Keyword already exists!
+enterKeyword = Enter Keyword...
 
 #RoleDetailsView/Learning
 learning = Learning*
@@ -383,6 +383,7 @@ osceMediumBreak = Medium break duration*
 osceForTask = Import tasks from...
 osceVersion = Version
 osceSpStayInPost = SP stays at station*
+
 #Manage Osces/Task Subview
 osceAddTask = Add task to OSCE*
 osceTaskName = Task name
@@ -676,19 +677,21 @@ nationaltiyWarning = Nationality already exists!
 #LearningObjectivView
 lrnObjAppliance = Appliance
 
-warningStandardizedRoleUnassigned = Please assign role to each station
-accessNotification=Access is all ready assigned
-information=Information
-roleTemplateDeleteWarning=RoleTemplate Can not be deleted as assign in Standardizd role
-roleTemplateDeleteMessage=RoleTemplate Deleted Successfully
+warningStandardizedRoleUnassigned = Please assign a role to each station!
+accessNotification = Access is already assigned!
+information = Information
+roleTemplateDeleteWarning = Role template can not be deleted as assign in standardizd role***
+roleTemplateDeleteMessage = Role template successfully deleted!
 
-csvFileError = File not proceed, it must contain student_id, name and prename field
-statisticsEvaluation=Statistics Evaluation
-statisticsEvaluationPllace=Statistics Evaluation place
-createOsce=Create Osce
-osceAssignments=Osce Assignments
-assignmentsOutput=Assignments Output
-afterTheOsce=After the OSCE
+csvFileError = File not processed. student_id, name and prename are required fields!
+statisticsEvaluation = Statistical Evaluation
+statisticsEvaluationPlace = Statistical Evaluation place***
+createOsce=Create OSCE
+osceAssignments=OSCE Assignments***
+assignmentsOutput=Assignments Output***
+afterTheOsce=After the OSCE***
 
-osceLunchBreakRequiredFiled=Lunch Break Required Field
-osceLongBreakRequiredFiled=Long Break Required Field
+osceLunchBreakRequiredFiled = Lunch break is a required field!
+osceLongBreakRequiredFiled = Long break is a required field!
+
+warningSelectSemester = Please select semester to edit!
