Change in Parcour

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -695,3 +695,4 @@ osceLunchBreakRequiredFiled = Mittagspause ist ein Pflichtfeld!
 osceLongBreakRequiredFiled = Lange Pause ist ein Pflichtfeld!
 
 warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
+numberOfRotationsInThisSequence=Number of rotations in this sequence
