--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -695,3 +695,4 @@ osceLunchBreakRequiredFiled = Lunch break is a required field!
 osceLongBreakRequiredFiled = Long break is a required field!
 
 warningSelectSemester = Please select semester to edit!
+numberOfRotationsInThisSequence=Number of rotations in this sequence
