--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -696,3 +696,5 @@ osceLongBreakRequiredFiled = Lange Pause ist ein Pflichtfeld!
 
 warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
 numberOfRotationsInThisSequence=Number of rotations in this sequence
+
+notAvailable=Not Available
