--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -696,5 +696,5 @@ osceLongBreakRequiredFiled = Long break is a required field!
 
 warningSelectSemester = Please select semester to edit!
 numberOfRotationsInThisSequence=Number of rotations in this sequence
-
+pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
