Module 3 Bug Fix and Module 8 changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -698,3 +698,4 @@ warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
 numberOfRotationsInThisSequence=Number of rotations in this sequence
 pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
+notAssigned=Not Assigned
