--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -698,3 +698,4 @@ warningSelectSemester = Please select semester to edit!
 numberOfRotationsInThisSequence=Number of rotations in this sequence
 pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
+notAssigned=Not Assigned
