Export OSCE Module And TTGen Changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -699,3 +699,4 @@ numberOfRotationsInThisSequence=Number of rotations in this sequence
 pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
 notAssigned=Not Assigned
+download=Download
