--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -699,3 +699,5 @@ numberOfRotationsInThisSequence=Number of rotations in this sequence
 pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
 notAssigned=Not Assigned
+
+download=Download
