--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -700,3 +700,5 @@ pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
 notAssigned=Not Assigned
 download=Download
+
+clearSelection=Clear Selection
