Module 8 Bug fix

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -700,5 +700,27 @@ pirAssignmentErrorMessage=Internal error occur during assigning patient in role
 notAvailable=Not Available
 notAssigned=Not Assigned
 download=Download
+examinerDoesNotExist=Examiner does not exist.
 
 clearSelection=Clear Selection
+
+#module 16[
+sequence=sequence 
+post=post 
+sumPerParcour=Sum per Parcour
+sumPerSequence=Sum per Sequence
+sumPerStudent=Sum per Student 
+missings=missings 
+average=average 
+stdDeviation=std. deviation 
+points=points 
+frequency=frequency(%) 
+cronbachsAlpha=cronbachs alpha(If Item Ommited)
+calculate=calculate
+studentCount=Student Count
+pass=pass(new)
+fail=fail(new)
+passingGrade=passing Grade
+minimum=minimum (sum student)
+maximum=maximum (sum student)
+#module 16]
