--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -702,3 +702,24 @@ notAssigned=Not Assigned
 
 download=Download
 clearSelection=Clear Selection
+examinerDoesNotExist=Examiner does not exist.
+#module 16[
+sequence=sequence 
+post=post 
+sumPerParcour=Sum per Parcour
+sumPerSequence=Sum per Sequence
+sumPerStudent=Sum per Student 
+missings=missings 
+average=average 
+stdDeviation=std. deviation 
+points=points 
+frequency=frequency(%) 
+cronbachsAlpha=cronbachs alpha(If Item Ommited)
+calculate=calculate
+studentCount=Student Count
+pass=pass(new)
+fail=fail(new)
+passingGrade=passing Grade
+minimum=minimum (sum student)
+maximum=maximum (sum student)
+#module 16]
