TTGen Bug Fix and Other Files

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -723,3 +723,8 @@ passingGrade=passing Grade
 minimum=minimum (sum student)
 maximum=maximum (sum student)
 #module 16]
+
+#by spec TTGen Change[
+earlierLunchError=Lunch break earlier not allowed
+laterLunchError=Lunch break later not allowed
+#by spec TTGen Change]
