Cleand up OsceConstantsWithLookup

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -51,12 +51,12 @@ MARITIALSTATUS_NOT_EQUALS = SimPat isn't
 AGE = Age
 GENDER = Gender 
 
-PERPIECE = Pro St\u00FCck*
-PERDAY = Pro Tag*
-CONSUMABLE = Verbrauchsmaterial*
-EQUIPMENT= Apparatur*
-FORSIMPAT = F\u00FCr SimPat*
-DAY = Tag*
+PERPIECE = Pro St\u00FCck
+PERDAY = Pro Tag
+CONSUMABLE = Verbrauchsmaterial
+EQUIPMENT= Apparatur
+FORSIMPAT = F\u00FCr SimPat
+DAY = Tag
 #By Spec]
 
 #Gender
@@ -79,7 +79,7 @@ WEIGHT = Gewicht
 BMI = Body-Mass-Index
 SCAR = Narbe
 LANGUAGE = Sprache
-ANAMNESIS = Anamnese*
+ANAMNESIS = Anamnese
 
 #RoleParticipantTypes
 AUTHOR = Autor
@@ -122,8 +122,8 @@ Simpat = SimPat
 Statist = Statist
 Material = Material
 
-table_item=Tabelle*
-rich_text_item=RichText*
+table_item=Tabelle
+rich_text_item=RichText
 #End
 
 notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter nicht gesetzt
@@ -153,21 +153,21 @@ Fixed_Status="Osce_Fixed_Status";
 Closed_Status="Osce_Closed_Status";
 
 #OsceStatus
-OSCE_NEW = Neuer OSCE*
-OSCE_BLUEPRINT = OSCE Vorlage*
-OSCE_GENRATED = Generierter OSCE*
-OSCE_FIXED = Fixierter OSCE*
-OSCE_CLOSED = Geschlossener OSCE*
+OSCE_NEW = Neuer OSCE
+OSCE_BLUEPRINT = OSCE Vorlage
+OSCE_GENRATED = Generierter OSCE
+OSCE_FIXED = Fixierter OSCE
+OSCE_CLOSED = Geschlossener OSCE
 
 #Semesters
 HS = HS
 FS = FS
 
 #PostType
-NORMAL = Regul\u00E4rer Posten*
-BREAK = Pause*
-ANAMNESIS_THERAPY = Doppelposten*
-PREPARATION = Vorbereitungsposten*
+NORMAL = Regul\u00E4rer Posten
+BREAK = Pause
+ANAMNESIS_THERAPY = Doppelposten
+PREPARATION = Vorbereitungsposten
 
 #OSCESecurityStatus
 SIMPLE = Regul\u00E4re Pr\u00FCfung 
