--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -51,12 +51,12 @@ MARITIALSTATUS_NOT_EQUALS = SimPat isn't
 AGE = Age
 GENDER = Gender
 
-PERPIECE = Per piece*
-PERDAY = Per day*
-CONSUMABLE = Consumable*
-EQUIPMENT= Equipment*
-FORSIMPAT = For SimPat*
-DAY = Day*
+PERPIECE = Per piece
+PERDAY = Per day
+CONSUMABLE = Consumable
+EQUIPMENT= Equipment
+FORSIMPAT = For SimPat
+DAY = Day
 #By Spec]
 
 #Gender
@@ -79,7 +79,7 @@ WEIGHT = Weight
 BMI = Body-Mass-Index
 SCAR = Scar
 LANGUAGE = Language
-ANAMNESIS = Anamnesis*
+ANAMNESIS = Anamnesis
 
 #RoleParticipantTypes
 AUTHOR = Author
@@ -122,8 +122,8 @@ Simpat = SimPat
 Statist = Supernumerary
 Material = Material
 
-table_item=Table*
-rich_text_item=RichText*
+table_item=Table
+rich_text_item=RichText
 #End
 
 notSetHostAddressException = DMZ_HOST_ADDRESS Init Parameter not set
@@ -153,21 +153,21 @@ Fixed_Status="Osce_Fixed_Status";
 Closed_Status="Osce_Closed_Status";
 
 #OsceStatus
-OSCE_NEW = New OSCE*
-OSCE_BLUEPRINT = OSCE blueprint*
-OSCE_GENRATED = Generated OSCE*
-OSCE_FIXED = Frozen OSCE*
-OSCE_CLOSED = Closed OSCE*
+OSCE_NEW = New OSCE
+OSCE_BLUEPRINT = OSCE blueprint
+OSCE_GENRATED = Generated OSCE
+OSCE_FIXED = Frozen OSCE
+OSCE_CLOSED = Closed OSCE
 
 #Semesters
 HS = HS
 FS = FS
 
 # PostType
-NORMAL = Regular Station*
-BREAK= Break*
-ANAMNESIS_THERAPY = Double Station*
-PREPARATION = Preparation Station*
+NORMAL = Regular Station
+BREAK= Break
+ANAMNESIS_THERAPY = Double Station
+PREPARATION = Preparation Station
 
 #OSCESecurityStatus
 SIMPLE = Regular exam 
