--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -724,3 +724,6 @@ maximum = Maximum (Summe Student)
 earlierLunchError = Fr\u00FChere Mittagspause nicht erlaubt!
 laterLunchError = Sp\u00E4tere Mittagspause nicht erlaubt!
 #by spec TTGen Change]
+breakDuration=Break Duration :
+newBreakDuration=New Break Duration :
+newBreakDurationNotNull=Break Duration cannot be num/negative
