--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -724,6 +724,6 @@ maximum = maximum (sum student)
 earlierLunchError = Earlier lunch break  not allowed!
 laterLunchError =Later lunch break not allowed!
 #by spec TTGen Change]
-breakDuration=Break Duration :
-newBreakDuration=New Break Duration :
-newBreakDurationNotNull=Break Duration cannot be num/negative
+breakDuration=Break duration:
+newBreakDuration=New break duration:
+newBreakDurationNotNull=Break duration cannot be empty or negative!
