Summonings Module Change files.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -527,7 +527,7 @@ summoningsAssignmentFormat = [Date] [Start Time] [End Time] [Role] [Room Number]
 warningSelectSp = Please select at least one standardized patient!
 warningTemplateNotFound = Template not found!
 confirmationMailSent = Mail sent successfully!
-errorMailSend = Failed to send mail!
+errorMailSend = Failed to send mail to one or more recipients!
 confirmationTplSaved = Template saved!
 errorInvalidTplPath = Invalid Path for Saving Template. Please contact Administrator.
 errorTplSave = Error saving template.
