SPAllocator & Module 3 Changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -727,3 +727,4 @@ laterLunchError = Sp\u00E4tere Mittagspause nicht erlaubt!
 breakDuration=Pausendauer:
 newBreakDuration=Neue Pausendauer:
 newBreakDurationNotNull=Pausendauer darf nicht leer oder negativ sein!
+ignoreAcceptedOsceDay=Ignore Accepted OsceDay
