--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -727,3 +727,4 @@ laterLunchError =Later lunch break not allowed!
 breakDuration=Break duration:
 newBreakDuration=New break duration:
 newBreakDurationNotNull=Break duration cannot be empty or negative!
+ignoreAcceptedOsceDay=Ignore Accepted OsceDay
