Fixed translation error; fixed paging issue in SPAnamnesisSubView

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -693,7 +693,7 @@ osceLongBreakRequiredFiled = Lange Paue sp\u00E4testens nach
 warningSelectSemester = Bitte zu bearbeitendes Semester ausw\u00E4hlen!
 numberOfRotationsInThisSequence=Anzahl Wechsel in dieser Sequenz
 pirAssignmentErrorMessage=Interner Fehler bei aufgetreten bei Rollenzuweisung
-notAvailable=Nicht verfügbar
+notAvailable=Nicht verf\u00FCgbar
 notAssigned=Nicht zugewiesen
 download=Download
 clearSelection=Auswahl aufheben
