--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -728,3 +728,7 @@ breakDuration=Pausendauer:
 newBreakDuration=Neue Pausendauer:
 newBreakDurationNotNull=Pausendauer darf nicht leer oder negativ sein!
 ignoreAcceptedOsceDay=Angenommenen OSCE-Termin ignorieren
+
+#payment
+payment=Payment
+#payment
