--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -728,3 +728,7 @@ breakDuration=Break duration:
 newBreakDuration=New break duration:
 newBreakDurationNotNull=Break duration cannot be empty or negative!
 ignoreAcceptedOsceDay=Ignore Accepted OsceDay
+
+#payment
+payment=Payment
+#payment
