Module 8 Export SP Functionality added

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -732,3 +732,5 @@ ignoreAcceptedOsceDay=Angenommenen OSCE-Termin ignorieren
 #payment
 payment=Payment
 #payment
+exportStudent=export Student
+exportSP=export SP
