--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -732,3 +732,5 @@ ignoreAcceptedOsceDay=Ignore Accepted OsceDay
 #payment
 payment=Payment
 #payment
+exportStudent=export Student
+exportSP=export SP
