--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -127,6 +127,7 @@ value = Wert
 weight = Gewicht
 workPermission = Arbeitsbewilligung
 yes = Ja
+participants = Participants
 
 ######################### - GENERAL - #########################
 
@@ -735,3 +736,8 @@ payment=Payment
 exportStudent=export Student
 exportSP=export SP
 copy=copy
+
+discipline=Discipline
+topic=Topic
+room=Room
+roomAlreadyAssignWantToExcahnge=Room is already assign to other post do you want to exchange the rooms?
