--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -741,3 +741,4 @@ discipline=Discipline
 topic=Topic
 room=Room
 roomAlreadyAssignWantToExcahnge=Room is already assign to other post do you want to exchange the rooms?
+osceSemester=Osce/Semester
