--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -743,3 +743,9 @@ room=Room
 roomAlreadyAssignWantToExcahnge=Room is already assign to other post do you want to exchange the rooms?
 
 osceSemester=Osce/Semester
+
+#spec issue change
+exchange=Exchange
+exchangeSpError=Standardized patient not selected
+exchangeStudError=Student not selected
+#spec issue change
