Student Management Module

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -748,3 +748,4 @@ exchange=Exchange
 exchangeSpError=Standardized patient not selected
 exchangeStudError=Student not selected
 #spec issue change
+StudentDetailsPlace=Student Management
