--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -749,3 +749,4 @@ exchange=Exchange
 exchangeSpError=Standardized patient not selected
 exchangeStudError=Student not selected
 #spec issue change
+StudentDetailsPlace=Student Management
