Module 16 : Item Analysis

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -179,3 +179,6 @@ OSCE_SEQUENCES_B=B
 OSCE_SEQUENCES_C=C
 OSCE_SEQUENCES_D=D
 OSCE_SEQUENCES_E=E
+
+item_analysis=item_analysis
+post_analysys=post_analysys
