Change for Anonymize SP

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -750,3 +750,4 @@ exchangeSpError=Standardized patient not selected
 exchangeStudError=Student not selected
 #spec issue change
 StudentDetailsPlace=Student Management
+anonymize=Anonymize
