--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -749,3 +749,5 @@ exchangeSpError=Standardized patient not selected
 exchangeStudError=Student not selected
 #spec issue change
 StudentDetailsPlace=Student Management
+
+anonymize=Anonymize
