--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -751,3 +751,8 @@ exchangeStudError=Student not selected
 #spec issue change
 StudentDetailsPlace=Student Management
 anonymize=Anonymize
+
+
+startDate=Start Date
+endDate=End Date
+osceSemesterMessage=Please enter date value for both date
