- Fixed some terminology errors. - added a new "Locale" for displaying constant names in the Application (Does not yet work!!!) - added new status EXPORTED_FOR_SCHEDULING to StandardizedPatientStatus

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -160,7 +160,7 @@ traits = Merkmale
 anamnesisValues = Fragebogen
 
 #Doctors
-doctors = Lecturers
+doctors = Examinatoren
 clinics = Kliniken
 
 #Role
@@ -209,8 +209,8 @@ spErrorInvalidImageFileType = Ung\u00FCltiger Bilddateityp!
 spErrorInvalidVideoFileType = Ung\u00FCltiger Videodateityp!
 
 #SPDetailsView
-spActive = Aktiv
-spInactive = Inaktiv
+spActive = Aktivieren
+spInactive = Deaktivieren
 
 warningFillRequiredFields = Bitte alle Pflichtfelder ausf\u00F6llen!
 
@@ -409,8 +409,8 @@ circuitStation = Posten
 select = Ausw\u00E4hlen
 circuitUnnamedSequence = Unbenannte Sequenz
 
-shiftLunchBreakNext=Mittag fr\u00FCher
-ShiftLunchBreakPrev=Mittag sp\u00E4ter
+shiftLunchBreakNext=Mittag sp\u00E4ter
+ShiftLunchBreakPrev=Mittag fr\u00FCher
 
 warningPostType = Bitte Postenart ausw\u00E4hlen!
 warningStatusNotChanged = Status von OSCE nicht auf "neu" ge\u00E4ndert!
@@ -446,10 +446,10 @@ warningHeaderValue=Bitte g\u00FCltigen Wert f\u00FCr OSCE eingeben
 warningStartEndTime=Startzeit muss vor Endzeit liegen.
 warningGenerate=Bitte Werte f\u00FCr Disziplin und Feld eingeben!
 dataWarning = Datum zu sp\u00E4t
-dataPastDateWarning = Data darf nicht nach Datum sein*
+dataPastDateWarning = Datum darf nicht in der Vergangenheit liegen!
 splittingNotAllowWarning=Auftrennen nicht erlaubt. Tagesendzeit muss sp\u00E4ter als 13:00 sein.
 roomAssignedWarning = Raum bereits einem anderen Posten zugewiesen
-pleaseEnterWarning = Bitte einen Wert eingeben f\u00FCr
+pleaseEnterWarning = Bitte einen g\u00FCltigen Wert eingeben f\u00FCr das Feld 
 confirmationDeleteOsceBluePrintPost = Wollen Sie diesen OSCE-Plan wirklich l\u00F6schen?
 
 #CircuitDetailsActivity
