--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -209,8 +209,8 @@ spErrorInvalidImageFileType = Invalid image file type.
 spErrorInvalidVideoFileType=Invalid video file type.
 
 #SPDetailsView
-spActive = Active
-spInactive = Inactive
+spActive = Activate
+spInactive = Deactivate
 
 warningFillRequiredFields = Please fill all the required fields!
 
@@ -446,10 +446,10 @@ warningHeaderValue=Please Enter Valid Value For OSCE
 warningStartEndTime=Start time has to be before end time!
 warningGenerate=Please enter  values for discipline and field!
 dataWarning = Date too late
-dataPastDateWarning = Data must not be past date*
+dataPastDateWarning = Date must not be in the past!
 splittingNotAllowWarning= Splitting is not allowed. Day end time must be greater than 13:00.
 roomAssignedWarning=Room already assigned to another post
-pleaseEnterWarning = Please enter value for 
+pleaseEnterWarning = Please enter a valid value in the field 
 confirmationDeleteOsceBluePrintPost = Do you want to delete this OSCE Blueprint ?
 
 #CircuitDetailsActivity
