--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -756,3 +756,5 @@ anonymize=Anonymize
 startDate=Start Date
 endDate=End Date
 osceSemesterMessage=Please enter date value for both date
+
+noDataFound=No Data Found
