--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -758,3 +758,9 @@ endDate=End Date
 osceSemesterMessage=Please enter date value for both date
 
 noDataFound=No Data Found
+
+clear=clear
+addPoint=Add Point
+minmum=min :*
+max=max :*
+minMaxNotNull=min and max cannot be null
