Export Checklist in Role Module

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -764,3 +764,7 @@ addPoint=Add Point
 minmum=min :*
 max=max :*
 minMaxNotNull=min and max cannot be null
+
+#export checklist
+exportChecklist=Export CheckList
+#export checklist
