add buttons  import patientinsmester

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -567,6 +567,7 @@ rolePatientInformation = Information \u00FCber SimPat
 
 #RoleAssignments/RoleAssignmentView
 roleSurveyImport = Umfragedaten importieren
+roleGetImport = Umfragedaten exportieren
 roleAutoAssign = Rollen automatisch zuweisen
 roleAccepted = Akzeptiert
 roleAssignTo = Zuweisen an
