role module sum and factor filed added .

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -769,3 +769,6 @@ minMaxNotNull=min and max cannot be null
 #export checklist
 exportChecklist=Export CheckList
 #export checklist
+
+sum=Sum
+factor=Factor
