--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -768,3 +768,6 @@ minMaxNotNull=min and max cannot be null
 #export checklist
 exportChecklist=Export CheckList
 #export checklist
+
+sum=Sum
+factor=Factor
