Payment and Bell Schedule Module Changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -772,3 +772,5 @@ exportChecklist=Export CheckList
 
 sum=Sum
 factor=Factor
+paymentInstitute=Dekanat, Medizinische Fakultät
+paymentName=Kaspar Traub
