--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -771,3 +771,5 @@ exportChecklist=Export CheckList
 
 sum=Sum
 factor=Factor
+paymentInstitute=Dekanat, Medizinische Fakultät
+paymentName=Kaspar Traub
