- Removed invalid entries in import.sql (anamnesis_checks_value) - Fixed "Constant name display mode" (aka "chinese locale...") - Fixed Icon-Button width problem - Added a few translations

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -450,7 +450,7 @@ dataPastDateWarning = Datum darf nicht in der Vergangenheit liegen!
 splittingNotAllowWarning=Auftrennen nicht erlaubt. Tagesendzeit muss sp\u00E4ter als 13:00 sein.
 roomAssignedWarning = Raum bereits einem anderen Posten zugewiesen
 pleaseEnterWarning = Bitte einen g\u00FCltigen Wert eingeben f\u00FCr das Feld 
-confirmationDeleteOsceBluePrintPost = Wollen Sie diesen OSCE-Plan wirklich l\u00F6schen?
+confirmationDeleteOsceBluePrintPost = Wollen Sie diesen Posten wirklich l\u00F6schen?
 
 #CircuitDetailsActivity
 updateOsce=OSCE Daten erfolgreich aktualisiert
@@ -738,8 +738,8 @@ exportStudent=export Student
 exportSP=export SP
 copy=copy
 
-discipline=Discipline
-topic=Topic
+discipline=Disziplin
+topic=Fachgebiet
 room=Room
 roomAlreadyAssignWantToExcahnge=Room is already assign to other post do you want to exchange the rooms?
 
