--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -450,7 +450,7 @@ dataPastDateWarning = Date must not be in the past!
 splittingNotAllowWarning= Splitting is not allowed. Day end time must be greater than 13:00.
 roomAssignedWarning=Room already assigned to another post
 pleaseEnterWarning = Please enter a valid value in the field 
-confirmationDeleteOsceBluePrintPost = Do you want to delete this OSCE Blueprint ?
+confirmationDeleteOsceBluePrintPost = Do you really want to delete this station?
 
 #CircuitDetailsActivity
 updateOsce=OSCE Data Updated sucessfully
@@ -738,9 +738,9 @@ exportSP=export SP
 copy=copy
 
 discipline=Discipline
-topic=Topic
+topic=Specific field
 room=Room
-roomAlreadyAssignWantToExcahnge=Room is already assign to other post do you want to exchange the rooms?
+roomAlreadyAssignWantToExcahnge = Room is already assigned to a different station. Do you want to exchange the rooms?
 osceSemester=Osce/Semester
 
 #spec issue change
