module 8 changes: SP in break in export,student in break in view and export

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -774,3 +774,7 @@ sum=Sum
 factor=Factor
 paymentInstitute=Dekanat, Medizinische Fakultät
 paymentName=Kaspar Traub
+
+
+studentName=student name
+studentLogicalBreak=Student Break
