--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -778,3 +778,7 @@ paymentName=Kaspar Traub
 
 studentName=student name
 studentLogicalBreak=Student Break
+
+previousAssignmentWillLost=previous assignment will be lost if any
+alphabeticOrder=Alphabatically
+scrumbleOrder=Scrumble
