--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -777,3 +777,7 @@ paymentName=Kaspar Traub
 
 studentName=student name
 studentLogicalBreak=Student Break
+
+previousAssignmentWillLost=previous assignment will be lost if any
+alphabeticOrder=Alphabatically
+scrumbleOrder=Scrumble
