--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -781,3 +781,5 @@ studentLogicalBreak=Student Break
 previousAssignmentWillLost=previous assignment will be lost if any
 alphabeticOrder=Alphabatically
 scrumbleOrder=Scrumble
+item=item
+impression=impression
