role search and print pdf bug fix.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -784,3 +784,4 @@ alphabeticOrder=Alphabatically
 scrumbleOrder=Scrumble
 item=item
 impression=impression
+resetToDefaultTemplate=Please reset to default template and try again.
