--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -783,3 +783,4 @@ alphabeticOrder=Alphabatically
 scrumbleOrder=Scrumble
 item=item
 impression=impression
+resetToDefaultTemplate=Please reset to default template and try again.
