--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -785,3 +785,5 @@ scrumbleOrder=Scrumble
 item=item
 impression=impression
 resetToDefaultTemplate=Please reset to default template and try again.
+
+studActError = No more timeslot available
