--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -784,3 +784,5 @@ scrumbleOrder=Scrumble
 item=item
 impression=impression
 resetToDefaultTemplate=Please reset to default template and try again.
+
+studActError = No more timeslot available
