Module 8 changes: Clear examiner assignments

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -787,3 +787,7 @@ impression=impression
 resetToDefaultTemplate=Please reset to default template and try again.
 
 studActError = No more timeslot available
+
+clearExaminerAssingment=Do you want to clear all examiner assignmnet for this post?
+clearExaminerAssingmentSuccess=Examiner assignments cleared successfully for this post.
+clearExaminerAssingmentNotSuccess=Examiner assignments not cleared successfully for this post.
